# slimlog

./: Cargo.toml  README.md  TODOs.md
.github/workflows/: build_and_test.yml
docs/: commands.md  syntax.md
src/: cli.rs  main.rs
src/compiler/: ast.rs  common.rs  compilation.rs  compiler.rs  compiler_utils.rs  context.rs  error.rs  instructions.rs  mod.rs  optimizations.rs  parser.rs  settings.rs  utils.rs
testing_programs/: cargo_test.mlogs  draw.mlogs  fibonacci.mlogs  invalid_control_arg.mlogs  repeated_set.mlogs  test10.mlogs  test11.mlogs  test12.mlogs  test13.mlogs  test14.mlogs  test15.mlogs  test16.mlogs  test17.mlogs  test2.mlogs  test3.mlogs  test4.mlogs  test5.mlogs  test6.mlogs  test7.mlogs  test8.mlogs  test9.mlogs  transopts_error.mlogs
testing_programs/syntax_errors/: extra_chars.mlogs  invalid_command.mlogs  must_begin_with_statement.mlogs  unclosed_string.mlogs  unparsable_argument.mlogs
