[package]
name = "mlogs"
authors = ["Potato Chronicler <thepotatochronicler@gmail.com>"]
description = "A lisp-like language that transpiles to mlog"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.4"
clap = { version = "3.1.8", features = ["derive", "cargo"] }
digest = "0.10.3"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.16"
nom = "7.1.1"
nom_locate = "4.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
simplelog = "0.11.2"
