[package]
name = "slimlog"
authors = ["Potato Chronicler <thepotatochronicler@gmail.com>"]
description = "A lisp-like language that compiles to mlog"
version = "0.1.0-alpha"
edition = "2021"

[[bin]]
name = "slimlog"
path = "src/cli.rs"

[dependencies]
blake2 = "0.10.4"
clap = { version = "3.1.8", features = ["derive", "cargo"] }
digest = "0.10.3"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.16"
nom = "7.1.1"
nom_locate = "4.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
